# libclip.axera

./: .gitmodules  CMakeLists.txt  README.md  README_zh.md  build_aarch64.sh
.github/workflows/: build.yml
include/: ax_devices.h  clip.h
pyclip/: example.py  gradio_example.py  gradio_example_with_translate.py  pyaxdev.py  pyclip.py
src/: CLIP.hpp  CLIPImageEncoder.hpp  CLIPImageEncoderAX650.hpp  CLIPTextEncoder.hpp  CLIPTextEncoderAX650.hpp  ax_devices.cpp  clip.cpp
src/runner/: ax_model_runner.hpp
src/runner/ax650/: ax_api_loader.h  ax_model_runner_ax650.cpp
src/runner/axcl/: ax_model_runner_axcl.cpp  axcl_manager.cpp  axcl_manager.h  axcl_manager.hpp  axclrt_api_loader.h
src/tokenizer/: tokenizer.cpp
src/utils/: enum_devices.cpp  enum_devices.hpp  mmap.hpp
tests/: test_ax_api.cpp  test_axcl_api.cpp  test_clip_direct.cpp  test_enum_devices.cpp  test_load_model.cpp  test_match_by_text.cpp  test_siglip2.cpp  test_siglip2_tokenizer.cpp
tests/tokenizer/: clip_tokenizer.txt  cnclip_tokenizer.txt  jinav2_tokenizer.txt  siglip2_tokenizer.txt  test_tokenizer.cpp  test_tokenizer.py
tests/utils/: cmdline.hpp
